--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# Created by .ignore support plugin (hsz.mobi)
+### Linux template
+*~
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+
+### Java template
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -11,34 +23,57 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# =========================
-# Operating System Files
-# =========================
 
-# OSX
-# =========================
+### JetBrains template
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion
 
-.DS_Store
-.AppleDouble
-.LSOverride
+*.iml
 
-# Thumbnails
-._*
+## Directory-based project format:
+.idea/
+# if you remove the above rule, at least ignore the following:
 
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
+# User-specific stuff:
+# .idea/workspace.xml
+# .idea/tasks.xml
+# .idea/dictionaries
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# Sensitive or high-churn files:
+# .idea/dataSources.ids
+# .idea/dataSources.xml
+# .idea/sqlDataSources.xml
+# .idea/dynamic.xml
+# .idea/uiDesigner.xml
 
-# Windows
-# =========================
+# Gradle:
+# .idea/gradle.xml
+# .idea/libraries
 
+# Mongo Explorer plugin:
+# .idea/mongoSettings.xml
+
+## File-based project format:
+*.ipr
+*.iws
+
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+
+
+### Windows template
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -57,3 +92,5 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+
